[metadata]
name = digisondeindices
version = 2.0.0
author = Sunip K. Mukherjee
author_email = sunipkmukherjee@gmail.com
description = Download and parse Digisonde data products.
url = https://github.com/sunipkm/digisondeindices
keywords =
  aeronomy
  aurora
  ionosphere
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
zip_safe = False
include_package_data = True
install_requires =
  python-dateutil
  requests
  numpy
  pandas >= 0.23.0
  xarray
  netcdf4
package_dir=
  =src

[options.packages.find]
  where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
plot =
  matplotlib
